<resources>
    <string name="app_name">FirebaseAuthExampe</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_sign_in">Already Registered , Sign In !</string>
    <string name="lbl_or">Or</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="type_your_number">Type your number</string>
    <string name="send_otp">Send otp</string>
    <string name="login_with_nmobile_number">Login with \nMobile number</string>
    <string name="_91">+91</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="_0">0</string>
    <string name="_1">0</string>
    <string name="otpimage">OTPiMAGE</string>
    <string name="get_data">Get Data</string>
    <string name="enter_name">enter name</string>
    <string name="enter_new_name">enter new name</string>
    <string name="enter_new_password">Enter new Password</string>
    <string name="update_data">UpdateData</string>
    <string name="enter_password">Enter Password</string>
    <string name="save_data">Save Data</string>
    <string name="delete_data">Delete data</string>
    <string name="do_batch_write">Do Batch Write</string>
    <string name="do_transaction">Upload Files</string>
    <string name="upload_image">Upload Image</string>
    <string name="pick_image">Pick Image</string>
    <string name="download_file">Download Image</string>
    <string name="delete_image">Delete Image</string>
    <string name="realTime_Db">Go to RealTime Db Activity</string>
    <string name="insert_data">insert Data</string>
    <string name="fetch_data">Fetch Data</string>
    <string name="firebase_realtime_database_app_in_kotlin">Firebase Realtime Database App in Kotlin</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_salary">Enter salary</string>
    <string name="emp_name">Emp Name</string>
    <string name="loading_data">Loading Data!!!....</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="emp_id">Emp id</string>
    <string name="emp_age">Emp Age</string>
    <string name="employee_salary">Employee Salary</string>
    <string name="facebook_login">Facebook Login</string>


    <string name="facebook_app_id">1064557214258776</string>
    <string name="fb_login_protocol_scheme">fb1064557214258776</string>
    <string name="facebook_client_token">cd7c1272470c1456430f6fbec0412af9</string>


</resources>